refactor: split import job into smaller separate jobs